--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,11 +1,23 @@
 h1 {
 	font-family: "Raleway", sans-serif;
-	color: #0D2C40;
+	color: #fff;
 	letter-spacing: 1px;
 	font-weight: 400;
 	font-size: 45px;
+	margin: 0;
 }
-
+header {
+	background-color: #F15B31;
+	padding: 30px 20px 30px 20px;
+}
+nav {
+	background-color: #00A6B3;
+	padding: 20px 0px 20px 0px;
+}
+main {
+	width: 850px;
+	margin: 35px auto 35px auto;
+}
 p {
 	font-family: "Droid Serif", Serif;
 	line-height: 26px;
@@ -13,13 +25,15 @@ p {
 }
 body {
 	text-align: center;
+	margin: 0;
 }
 a {
 	font-family: "Raleway", sans-serif;
-	color: #F15B31;
+	color: #fff;
 	letter-spacing: 1px;
 	font-weight: 600;
 	font-size: 18px;
+	margin: 0px 20px 0px 20px;
 }
 h2 {
 	font-family: "Raleway", sans-serif;
@@ -30,10 +44,13 @@ h2 {
 }
 h3 {
 	font-family: "Raleway", sans-serif;
-	color: #3FA2E5;
+	color: #339966;
 	letter-spacing: 1px;
 	font-weight: 600;
-	font-size: 22px;
+	font-size: 25px;
+}
+img {
+	margin: 40px 8px 0px 8px;
 }
 .social {
 	font-family: "Raleway", sans-serif;
@@ -48,4 +65,8 @@ h3 {
 	letter-spacing: 1px;
 	font-weight: 600;
 	font-size: 12px;
+}
+.wackiest {
+	background-color: #d3dafd;
+	padding: 1px 0px 1px 0px;
 }
