--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -28,7 +28,7 @@ p {
 	font-family: "Droid Serif", Serif;
 	color: white;
 	line-height: 26px;
-	font-size: 15px;
+	font-size: 14px;
 	font-weight: 400;
 }
 body {
@@ -61,10 +61,12 @@ h2 {
 }
 h3 {
 	font-family: "Raleway", sans-serif;
-	color: #339966;
+	color: #fff;
 	letter-spacing: 1px;
 	font-weight: 600;
-	font-size: 25px;
+	font-size: 18px;
+	margin: 0px 20px 0px 20px;
+	display: inline;
 }
 img {
 	margin: 40px, 8px;
@@ -83,7 +85,7 @@ span {
 .slash{
 	color: white;
 	margin: 0 auto;
-	font-size: 15px;
+	font-size: 14px;
 }
 
 .link {
@@ -91,7 +93,7 @@ span {
 	color: white;
 	letter-spacing: 1px;
 	font-weight: 600;
-	font-size: 15px;
+	font-size: 14px;
 	margin: 0 auto;
 }
 .friends {
@@ -99,7 +101,7 @@ span {
 	color: black;
 	letter-spacing: 1px;
 	font-weight: 600;
-	font-size: 15px;
+	font-size: 14px;
 	margin: 0 auto;
 }
 .name {
